--- a/src/app/components/modal/modal-data-manipulation/modal-data-manipulation.component.html
+++ b/src/app/components/modal/modal-data-manipulation/modal-data-manipulation.component.html
@@ -6,12 +6,12 @@
 
     <div class="Panel">
       <div class="matLabel">
-        <mat-selection-list class="floating" #data>
-          <mat-list-option class="text_check" checkboxPosition="before">inf à</mat-list-option>
-          <mat-list-option class="text_check" checkboxPosition="before">inf égal à </mat-list-option>
-          <mat-list-option class="text_check" checkboxPosition="before">égal</mat-list-option>
-          <mat-list-option class="text_check" checkboxPosition="before">supérieur à </mat-list-option>
-          <mat-list-option class="text_check" checkboxPosition="before">supérieur égal à </mat-list-option>
+        <mat-selection-list class="floating" #type>
+          <mat-list-option class="text_check" checkboxPosition="before" value="inf à">inf. à</mat-list-option>
+          <mat-list-option class="text_check" checkboxPosition="before" value="inf égal à">inf. égal à </mat-list-option>
+          <mat-list-option class="text_check" checkboxPosition="before" value="égal">égal</mat-list-option>
+          <mat-list-option class="text_check" checkboxPosition="before" value="sup à">sup. à </mat-list-option>
+          <mat-list-option class="text_check" checkboxPosition="before" value="sup égal à">sup. égal à </mat-list-option>
         </mat-selection-list>
 
       </div>
@@ -26,9 +26,10 @@
 
     <div class="part2">
 
-      <mat-checkbox>
+      <mat-checkbox #compris (click)="unselectOther()">
+        Compris entre
       </mat-checkbox>
-      Compris entre
+
       <mat-form-field>
         <input type="Number" matInput #first_text></mat-form-field>
       et <mat-form-field><input type="Number" matInput #last_text></mat-form-field>
