--- a/src/app/components/modal/modal-data-manipulation/modal-data-manipulation.component.html
+++ b/src/app/components/modal/modal-data-manipulation/modal-data-manipulation.component.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <button type="button" class="btn btn-primary saveButton" color="primary" (click)="save()">Ajouter</button>
+    <button type="button" class="btn btn-primary saveButton" color="primary" (click)="onSave()">Ajouter</button>
     <button type="button" class="btn btn-danger closeButton" color="primary" (click)="close()">Fermer</button>
 
   </mat-dialog-content>
