--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -1,21 +1,29 @@
 <div class="container" (drop)="onDrop($event)" (dragover)="allowDrop($event)">
   <p></p>
   <ng-container *ngIf="isTabView">
-      <!-- <table>
-          <ng-container *ngFor="let dataset of data">
-            <tr>
-              <th>
-                {{ dataset.name }}
-              </th>
-            </tr>
-            <tr *ngFor="let value of dataset.vls">
-              <td>
-                {{value}}
-              </td>
-            </tr>
+    <table cdkDropListGroup>
+      <tr>
+        <ng-container *ngFor="let column of displayedColumns ; let i = index">
+          <th class="header" cdkDropList cdkDropListLockAxis="x" cdkDropListOrientation="horizontal"
+            (cdkDropListDropped)="dropListDropped($event, i)" cdkDrag (cdkDragStarted)="dragStarted($event, i)"
+            [cdkDragData]="{name: column, columIndex: i}">
+            {{ column }}
+          </th>
+        </ng-container>
+      </tr>
+    
+      <ng-container *ngFor="let data of dataSource; let j = index">
+        <tr>
+          <ng-container *ngFor="let column of displayedColumns ; let i = index">
+            <ng-container *ngIf="getRowSpan(column,j)">
+              <td [attr.rowspan]="getRowSpan(column,j)">
+                {{ transform(data[column],column) }}</td>
+            </ng-container>
           </ng-container>
-      </table> -->
-      <table mat-table [dataSource]="dataSource" class="container">
+        </tr>
+      </ng-container>
+    </table>
+      <!-- <table mat-table [dataSource]="dataSource" class="container">
           <ng-container [matColumnDef]="displayedColumns[0]" sticky>
               <th mat-header-cell *matHeaderCellDef mat-sort-header> {{displayedColumns[0]}} </th>
               <td mat-cell *matCellDef="let element"> {{element[displayedColumns[0]]}} </td>
@@ -23,7 +31,7 @@
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+      </table> -->
   </ng-container>
   <div>
     <canvas #myCanvas width="250" height="250">
