--- a/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.html
+++ b/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.html
@@ -5,95 +5,47 @@
   <mat-dialog-content class="contentdialog">
 
     <div class="leftTab">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
-        <!-- Checkbox Column -->
-        <ng-container matColumnDef="select">
-          <td mat-cell *matCellDef="let row">
-          </td>
-        </ng-container>
-
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let element" (click)="clicked()"> {{element.position}} </td>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element" (click)="clicked()"> {{element.name}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef> Weight </th>
-          <td mat-cell *matCellDef="let element" (click)="clicked()"> {{element.weight}} </td>
-        </ng-container>
-
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef> Symbol </th>
-          <td mat-cell *matCellDef="let element" (click)="clicked()"> {{element.symbol}} </td>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container *ngFor="let column of displayedColumns">
+          <ng-container *ngIf="column != 'select'">
+            <ng-container [matColumnDef]="column">
+              <th mat-header-cell *matHeaderCellDef> {{ column }} </th>
+              <td mat-cell *matCellDef="let element" (click)="clicked(element)"> {{element[column]}} </td>
+            </ng-container>
+          </ng-container>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
         </tr>
       </table>
     </div>
 
     <div class="rightTab">
       <table mat-table [dataSource]="dataSources" class="mat-elevation-z8">
-        <!-- Checkbox Column -->
-        <ng-container matColumnDef="select">
-          <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-              [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-            </mat-checkbox>
-          </th>
-          <td mat-cell *matCellDef="let row">
-            <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-              [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
-            </mat-checkbox>
-          </td>
-        </ng-container>
 
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-        </ng-container>
+         <ng-container *ngFor="let columnright of displayedColumnsright">
+           <ng-container *ngIf="columnright != 'delete'">
+              <ng-container [matColumnDef]="columnright">
+                  <th mat-header-cell *matHeaderCellDef> {{ columnright }} </th>
+                  <td mat-cell *matCellDef="let element"> {{element[columnright]}} </td>
+           </ng-container>
+          </ng-container>
+        </ng-container> 
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef> Weight </th>
-          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-        </ng-container>
-
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef> Symbol </th>
-          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
-
-        <!-- delete Column -->f
         <ng-container matColumnDef="delete">
-          <th mat-header-cell *matHeaderCellDef> Suprimer </th>
-          <td mat-cell *matCellDef="let element">
-            <mat-icon (click)="delete()">delete_outline</mat-icon>
-          </td>
-        </ng-container>
+            <th mat-header-cell *matHeaderCellDef> Supprimer </th>
+            <td mat-cell *matCellDef="let element">
+              <mat-icon (click)="delete(element)">delete_outline</mat-icon>
+            </td>
+          </ng-container> 
+
+
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsright"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumnsright;" (click)="selection.toggle(row)">
-        </tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsright;"></tr> 
       </table>
+
 
     </div>
   </mat-dialog-content>
