--- a/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
+++ b/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
@@ -18,12 +18,16 @@ mat-dialog-content {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 50vh;
+  height: 60vh;
+  max-height: 60vh;
   overflow: auto;
 }
 
 .rightTab {
   margin-left: 5%;
+  height: fit-content;
+  max-height: 60vh;
+  overflow: auto;
 }
 
 .saveButton {
