--- a/src/app/components/param-view/param-view.component.html
+++ b/src/app/components/param-view/param-view.component.html
@@ -34,7 +34,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="setActifInactif(row)">
       </tr>
     </table>
-    <button class="addButton" mat-icon-button (click)="AddFilterString()">+</button>
+    <button class="addButton" mat-icon-button (click)="whichDialog()">+</button>
 
   </mat-tab>
 
@@ -67,7 +67,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="excludeOrInclude(row)">
       </tr>
     </table>
-    <button class="addButton" mat-icon-button (click)="AddFilter()">+</button>
+    <button class="addButton" mat-icon-button (click)="whichDialog()">+</button>
   </mat-tab>
 
 </mat-tab-group>
