--- a/src/app/components/param-view/param-view.component.html
+++ b/src/app/components/param-view/param-view.component.html
@@ -25,7 +25,7 @@
         <ng-container *ngIf='column != "select"'>
           <ng-container [matColumnDef]="column">
             <th mat-header-cell *matHeaderCellDef> {{ column }} </th>
-            <td mat-cell *matCellDef="let element"> {{element[name]}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
         </ng-container>
       </ng-container>
