--- a/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.html
+++ b/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <div class="dialogContainer">
-  <h2 mat-dialog-title class="dialogTitle">Quent1</h2>
+  <h2 mat-dialog-title class="dialogTitle">Groupement</h2>
 
   <mat-dialog-content class="contentdialog">
 
