--- a/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.html
+++ b/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.html
@@ -51,7 +51,7 @@
   </mat-dialog-content>
 
   <div class="button_div">
-    <button type="button" class="btn btn-primary saveButton" color="primary" (click)="save()">Valider</button>
+    <button type="button" class="btn btn-primary saveButton" color="primary" (click)="onSave()">Valider</button>
     <button type="button" class="btn btn-danger closeButton" color="primary" (click)="close()">Fermer</button>
   </div>
 </div>
