Fab button animated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="fab">
         <span class="fab-action-button">
-              <i class="fab-action-button__icon icon-material_add" (click)="diviseChartsSegment()"></i>
+              <i class="fab-action-button_icon icon-material_add" (click)="diviseChartsSegment()"></i>
           </span>
       </div>
   </div>
