--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -23,7 +23,7 @@
   <div class="fabWrapper">
     <div class="fab">
       <span class="fab-action-button">
-        <i class="fab-action-button__icon icon-material_renew"></i>
+        <i class="fab-action-button_icon icon-material_renew"></i>
       </span>
       <ul class="fab-buttons">
         <li class="fab-buttons__item">
