--- a/src/app/components/chart-view/chart-view.component.scss
+++ b/src/app/components/chart-view/chart-view.component.scss
@@ -22,3 +22,19 @@
   z-index: 100;
   position: fixed;
 }
+
+.fab-action-button {
+  transition: linear 0.3s;
+}
+
+.fab:hover .fab-action-button {
+  background-color: lightgrey;
+}
+
+.fab-action-button_icon{
+  transition: linear 0.3s;
+}
+
+.fab:hover .fab-action-button_icon {
+  transform: rotate(-180deg);
+}
