--- a/src/app/components/chart-view/chart-view.component.scss
+++ b/src/app/components/chart-view/chart-view.component.scss
@@ -14,16 +14,16 @@
 
 th, td {
     vertical-align: top;
-    border-right: 1px solid rgba(0,0,0,.12);
+    border-right: 1px solid rgba(255, 255, 255, 0.12);
     padding-left: 16px !important;
     padding-top: 14px !important;
-    border-bottom: 1px solid rgba(0,0,0,.12);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.12);
   }
 
   table {
     width: 100%;
-    border-left: 1px solid rgba(0,0,0,.12);
-    border-top: 1px solid rgba(0,0,0,.12);
+    border-left: 1px solid rgba(255, 255, 255, 0.12);
+    border-top: 1px solid rgba(255, 255, 255, 0.12);
  }
 
 .header{
