--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .paramview {
-    color: white;
-    position: static;
+  color: white;
+  position: static;
 }
 
 .accordion-headers-align .mat-expansion-panel-header-title {
@@ -10,6 +10,10 @@
 
 main-expansion-panel {
   width: 100%;
+}
+
+.mat-expansion-panel{
+  background: unset;
 }
 
 .mat-expansion-panel-header,
