--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,8 @@
             </mat-panel-title>
           </mat-expansion-panel-header>
           <hr size="1" color="lightgray">
-          <h6 class="field" draggable="true" *ngFor="let field of data.fields" (dragstart)="onDragField($event,field)">
-            {{ field }}
+          <h6 class="field" draggable="true" *ngFor="let field of data.fields" (dragstart)="onDragField($event,field,data.name)">
+            {{ getField(field) }}
           </h6>
         </mat-expansion-panel>
       </mat-accordion>
