--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -54,4 +54,10 @@
       </ul>
     </div>
   </div>
+  <div class="closeWrapper"> 
+    <div class="closeIcon">
+      <i class="icon-material icon-material_close" (click)="deleteChartView()">
+      </i>
+    </div>
+  </div>
 </div>
