--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,35 +20,10 @@ header {
   margin-bottom: 5%;
 }
 
-figure {
-  margin: 0 auto 0.5% auto;
-}
-
-figcaption {
-  display: inline-block;
-  margin-bottom: 1%;
-  font-size: 4vh;
-}
-
 header img {
-  width: 1.5%;
-}
-
-main {
-  padding-top: 3%;
-  display: grid;
-  grid-template-columns: 1fr 4fr 1fr;
-}
-
-#chartContainerDouble {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-main nav {
-  margin-right: 2%;
-  padding-left: 2%;
-  border-right: 1px solid grey;
+  width: 1.5vw;
+  height: 4vh;
+  padding-bottom: 1vh;
 }
 
 .chartContained {
@@ -58,6 +33,7 @@ main nav {
   margin: auto;
   color: white;
   border: 1px dotted gray;
+  border-radius: 20px;
 }
 
 .chartContainedFour {
@@ -67,6 +43,7 @@ main nav {
   margin: auto;
   color: white;
   border: 1px dotted gray;
+  border-radius: 20px;
 }
 
 .charts {
@@ -119,14 +96,11 @@ figcaption {
   font-size: 4vh;
 }
 
-header img {
-  width: 1.5%;
-}
-
 main {
+  padding-top: 3%;
   position: absolute;
   display: grid;
-  grid-template-columns: 1.5fr 4fr 1.5fr;
+  grid-template-columns: 1.5fr 6fr 1.5fr;
 }
 
 #chartContainerDouble {
@@ -142,51 +116,10 @@ main nav {
   border-right: 1px solid grey;
 }
 
-.chartContained {
-  overflow: auto;
-  height: 90vh;
-  color: white;
-  border: 1px dotted gray;
-  border-radius: 20px;
-}
-
-.chartContainedFour {
-  overflow: auto;
-  height: 45vh;
-  color: white;
-  border: 1px dotted gray;
-  border-radius: 20px;
-}
-
-.charts {
-  height: 90vh;
-  border: 2px dotted rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
-  background-image: url("./assets/images/barChart.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-}
-
-.chartsFour {
-  height: 45vh;
-  border: 2px dotted rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
-  background-image: url("./assets/images/barChart.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-}
-
 ul {
   list-style: none;
 }
 
-main aside {
-  border-left: 1px solid grey;
-  padding-left: 2%;
-  margin-left: 3%;
-}
 
 //scrollbar
 /* width */
@@ -213,10 +146,6 @@ main aside {
 }
 
 //FAB style
-
-.fab {
-  position: fixed;
-}
 
 .fab-action-button:hover + .fab-buttons {
   opacity: 1;
