changing FAB icon and animation

--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -31,7 +31,7 @@
   <div class="fabWrapper">
     <div class="fab">
       <span class="fab-action-button">
-        <i class="fab-action-button_icon icon-material_renew"></i>
+        <i class="fab-action-button_icon icon-material_burger"></i>
       </span>
       <ul class="fab-buttons">
         <li class="fab-buttons__item">
