--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
           </span>
       </div>
   </div>
-  <aside>
+  <aside class="right_panel">
     <app-param-view class="paramview"></app-param-view>    
   </aside>
 </main>
