Ajout filtre fonctionnel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
       </div>
   </div>
   <aside>
-    <app-param-view [parentObs]="obsRightPanel" (messageEvent)="receiveMessage($event)" class="paramview"></app-param-view>    
+    <app-param-view [parentObs]="obsRightPanel" (messageEvent)="messageReceiveFromRightPanel($event)" class="paramview"></app-param-view>    
   </aside>
 </main>
 <div id='templates'>
