--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -14,7 +14,7 @@
       <ng-container *ngFor="let data of dataSource; let j = index">
         <tr>
           <ng-container *ngFor="let column of displayedColumns ; let i = index">
-            <ng-container *ngIf="getRowSpan(column,j)">
+            <ng-container *ngIf="getRowSpan(column,j) && isNotExclude(data[column],column)">
               <td [attr.rowspan]="getRowSpan(column,j)">
                 {{ transform(data[column],column) }}</td>
             </ng-container>
