--- a/src/app/components/param-view/param-view.component.html
+++ b/src/app/components/param-view/param-view.component.html
@@ -68,6 +68,9 @@
       </tr>
     </table>
     <button class="addButton" mat-icon-button (click)="whichDialog()">+</button>
-  </mat-tab>
+    <button class="toto" mat-icon-button (click)="AddFilterDate()">+</button>
+
+    
+  </mat-tab> 
 
 </mat-tab-group>
