--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,187 @@
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
+
+@media (max-width :400px){
+  a,body{
+      font-size: 2.3vw;
+  }
+
+  h6{
+      font-size: 2.35vw;
+  }
+
+  h5{
+      font-size: 2.45vw;
+  }
+
+  h4{
+      font-size: 2.55vw; 
+  }
+
+  h3{
+      font-size: 2.65vw;
+  }
+
+  h2{
+      font-size: 2.8vw;
+  }
+
+  h1{
+      font-size: 3vw;
+  } 
+}
+
+@media (min-width : 400px) and (max-width:600px){
+  a,body{
+      font-size: 2.2vw;
+  }
+
+  h6{
+      font-size: 2.25vw;
+  }
+
+  h5{
+      font-size: 2.35vw;
+  }
+
+  h4{
+      font-size: 2.45vw; 
+  }
+
+  h3{
+      font-size: 2.55vw;
+  }
+
+  h2{
+      font-size: 2.7vw;
+  }
+
+  h1{
+      font-size: 2.9vw;
+  }
+}
+
+@media (min-width:600px) and (max-width:900px) {
+  a,body{
+      font-size : 1.7vw;
+  }
+
+  h6{
+      font-size: 1.75vw;
+  }
+
+  h5{
+      font-size: 1.85vw;
+  }
+
+  h4{
+      font-size: 1.95vw; 
+  }
+
+  h3{
+      font-size: 2.05vw;
+  }
+
+  h2{
+      font-size: 2.2vw;
+  }
+
+  h1{
+      font-size: 2.35vw;
+  }
+}
+
+@media (min-width:900px) and (max-width:1200px){
+  a,body{
+      font-size : 1.35vw;
+  }
+
+  h6{
+      font-size: 1.39vw;
+  }
+
+  h5{
+      font-size: 1.5vw;
+  }
+
+  h4{
+      font-size: 1.6vw; 
+  }
+
+  h3{
+      font-size: 1.7vw;
+  }
+
+  h2{
+      font-size: 1.85vw;
+  }
+
+  h1{
+      font-size: 2vw;
+  }  
+} 
+
+@media (min-width:1200px) and (max-width:1500px){
+  a,body{
+      font-size: 1.1vw;
+  }
+
+  h6{
+      font-size: 1.16vw;
+  }
+
+  h5{
+      font-size: 1.25vw;
+  }
+
+  h4{
+      font-size: 1.35vw; 
+  }
+
+  h3{
+      font-size: 1.45vw;
+  }
+
+  h2{
+      font-size: 1.6vw;
+  }
+
+  h1{
+      font-size: 1.8vw;
+  }
+}
+
+@media (min-width:1500px) {
+  a,body{
+      font-size: .95vw; 
+  }
+
+  h6{
+      font-size: .99vw;
+  }
+
+  h5{
+      font-size: 1.1vw;
+  }
+
+  h4{
+      font-size: 1.2vw; 
+  }
+
+  h3{
+      font-size: 1.3vw;
+  }
+
+  h2{
+      font-size: 1.45vw;
+  }
+
+  h1{
+      font-size: 1.6vw;
+  }
+}
+
 body {
   background-color: black;
   color: white;
