--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h1>Données</h1>
       <hr size="1" color="lightgray">
       <mat-accordion class="accordion-headers-align">
-        <mat-expansion-panel *ngFor="let data of datas">
+        <mat-expansion-panel *ngFor="let data of activeTable">
           <mat-expansion-panel-header>
             <mat-panel-title>
               <h4>{{data.name}}</h4>
