--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <nav>
     <div class="data">
       <h1>Données</h1>
+      <button id="lolKeksButton" (click)="random()"></button>
       <hr size="1" color="lightgray">
       <mat-accordion class="accordion-headers-align">
         <mat-expansion-panel *ngFor="let data of datas">
