--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -1,4 +1,4 @@
-<div class="container" (click)="emitActiveInstance()" (drop)="onDrop($event)" (dragover)="allowDrop($event)">
+<div class="container" (click)="emitActiveInstance($event)" (drop)="onDrop($event)" (dragover)="allowDrop($event)">
   <ng-container *ngIf="currentType == 'tab'">
     <table cdkDropListGroup>
       <tr>
