--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -11,10 +11,10 @@
         </ng-container>
       </tr>
     
-      <ng-container *ngFor="let data of datas; let j = index">
+      <ng-container *ngFor="let data of datasourceTable; let j = index">
         <tr>
           <ng-container *ngFor="let column of displayedColumns ; let i = index">
-            <ng-container *ngIf="getRowSpan(column,j) && isNotExclude(data,column)">
+            <ng-container *ngIf="getRowSpan(column,j)">
               <td [attr.rowspan]="getRowSpan(column,j)">
                 {{ transform(data[column],column) }}</td>
             </ng-container>
