Implementation of bloxplot diagram

--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -55,6 +55,11 @@
           </a>
         </li>
         <li class="fab-buttons__item">
+          <a (click)="changeChartView('boxplot')" href="#" class="fab-buttons__link" data-tooltip="boxplot">
+            <i class="icon-material icon-material_boxplot"></i>
+          </a>
+        </li>
+        <li class="fab-buttons__item">
           <a (click)="changeChartView('tab')" href="#" class="fab-buttons__link" data-tooltip="Tab">
             <i class="icon-material icon-material_tab"></i>
           </a>
