--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -1,3 +1,6 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
 <div class="container" (click)="emitActiveInstance($event)" (drop)="onDrop($event)" (dragover)="allowDrop($event)">
   <ng-container *ngIf="currentType == 'tab'">
     <table cdkDropListGroup>
@@ -7,10 +10,11 @@
             (cdkDropListDropped)="dropListDropped($event, i)" cdkDrag (cdkDragStarted)="dragStarted($event, i)"
             [cdkDragData]="{name: column, columIndex: i}">
             {{ column }}
+            <i (click)="row_clear(i)" class="material-icons clear row_clear">clear</i>
           </th>
         </ng-container>
       </tr>
-    
+
       <ng-container *ngFor="let data of datas; let j = index">
         <tr>
           <ng-container *ngFor="let column of displayedColumns ; let i = index">
@@ -62,7 +66,7 @@
       </ul>
     </div>
   </div>
-  <div class="closeWrapper"> 
+  <div class="closeWrapper">
     <div class="closeIcon">
       <i class="icon-material icon-material_close" (click)="deleteChartView()">
       </i>
