--- a/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
+++ b/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
@@ -68,5 +68,10 @@ mat-dialog-content {
 }
 
 .ban {
-  margin-left: 35%;
+  text-align: center;
+}
+
+.mat-radio-button {
+  padding-left: 1%;
+  padding-right: 1%;
 }
