--- a/src/app/components/param-view/param-view.component.html
+++ b/src/app/components/param-view/param-view.component.html
@@ -38,7 +38,7 @@
 
   </mat-tab>
 
-  <mat-tab label="Tri" class="titre_tab">
+  <mat-tab label="Filtrage" class="titre_tab">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
       <ng-container matColumnDef="select">
