--- a/src/app/components/modal/modal-date-manipulation/modal-date-manipulation.component.html
+++ b/src/app/components/modal/modal-date-manipulation/modal-date-manipulation.component.html
@@ -1,5 +1,5 @@
 <div class="dialogContainer">
-  <h2 mat-dialog-title class="dialogTitle">Date filter</h2>
+  <h2 mat-dialog-title class="dialogTitle">{{getTitle()}}</h2>
 
 
   <mat-dialog-content class="contentdialog">
