--- a/src/app/components/chart-view/chart-view.component.scss
+++ b/src/app/components/chart-view/chart-view.component.scss
@@ -1,5 +1,7 @@
 .container {
   position: relative;
+  width:100%;
+  height:100%;
 }
 
 .tasks {
@@ -79,20 +81,19 @@ canvas {
   position: absolute;
 }
 
-th,
-td {
-  vertical-align: top;
-  border-right: 1px solid rgba(255, 255, 255, 0.12);
-  padding-left: 16px !important;
-  padding-top: 14px !important;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.12);
-}
+th, td {
+    vertical-align: top;
+    border-right: 2px solid rgba(255, 255, 255, 0.12);
+    padding-left: 16px !important;
+    padding-top: 14px !important;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.12);
+  }
 
-table {
-  width: 100%;
-  border-left: 1px solid rgba(255, 255, 255, 0.12);
-  border-top: 1px solid rgba(255, 255, 255, 0.12);
-}
+  table {
+    width: 100%;
+    border-left: 2px solid rgba(255, 255, 255, 0.12);
+    border-top: 2px solid rgba(255, 255, 255, 0.12);
+ }
 
 .header {
   text-align: center !important;
