--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -55,17 +55,21 @@
           </a>
         </li>
         <li class="fab-buttons__item">
+          <a (click)="changeChartView('boxplot')" href="#" class="fab-buttons__link" data-tooltip="Boxplot">
+            <i class="icon-material icon-material_boxplot"></i>
+          </a>
+        </li>
+        <li class="fab-buttons__item">
           <a (click)="changeChartView('tab')" href="#" class="fab-buttons__link" data-tooltip="Tab">
             <i class="icon-material icon-material_tab"></i>
           </a>
         </li>
+        <li class="fab-buttons__item">
+          <a (click)="deleteChartView()" href="#" class="fab-buttons__link closeIcon" data-tooltip="Close">
+            <i class="icon-material icon-material_close"></i>
+          </a>
+        </li>
       </ul>
-    </div>
-  </div>
-  <div class="closeWrapper"> 
-    <div class="closeIcon">
-      <i class="icon-material icon-material_close" (click)="deleteChartView()">
-      </i>
     </div>
   </div>
 </div>
