--- a/src/app/components/chart-view/chart-view.component.scss
+++ b/src/app/components/chart-view/chart-view.component.scss
@@ -18,11 +18,6 @@
   right: 3.7vw;
 }
 
-.closeWrapper{
-  position: absolute;
-  top: .5vh;
-  right: 7vw;
-}
 
 canvas{
   padding-top: 2vh;
@@ -34,18 +29,14 @@ canvas{
 }
 
 .closeIcon{
-  z-index: 100;
-  position: absolute;
-  border-radius: 80px;
-  height: 0;
-  visibility: hidden;
-  transition: linear .6s;
+  transition: linear .5s;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%; 
+  background-color: rgb(255, 0, 0);
 }
 
-.closeIcon:hover, .fabWrapper:hover + .closeWrapper .closeIcon {
-  background-color: rgb(0, 255, 255);
-  visibility: visible;
-  height: inherit;
+.closeIcon i{
   filter: invert(100%);
 }
 
@@ -81,16 +72,17 @@ canvas{
 
 th, td {
     vertical-align: top;
-    border-right: 1px solid rgba(255, 255, 255, 0.12);
+    border-right: 2px solid rgb(255, 255, 255);
     padding-left: 16px !important;
     padding-top: 14px !important;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+    border-bottom: 2px dotted rgba(255, 255, 255, 0.822);
+    text-align: center;
   }
 
   table {
-    width: 100%;
-    border-left: 1px solid rgba(255, 255, 255, 0.12);
-    border-top: 1px solid rgba(255, 255, 255, 0.12);
+    width: 85%;
+    border: 2px solid rgb(255, 255, 255);
+    margin: auto;
  }
 
 .header{
