--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -71,6 +71,12 @@
       </ul>
     </div>
   </div>
+
+<div class="charts_spinner">
+  <template  #spinningRecords></template>
+</div>
+
+
   <div class="closeWrapper">
     <div class="closeIcon">
       <i class="icon-material icon-material_close" (click)="deleteChartView()">
