--- a/src/app/components/modal/modal-load-spinner/modal-load-spinner.component.html
+++ b/src/app/components/modal/modal-load-spinner/modal-load-spinner.component.html
@@ -1,3 +1,4 @@
-<p>
-  modal-load-spinner works!
-</p>
+<div class="progress-loader">
+  <mat-progress-spinner class="charts_spinner" [diameter]="50" [mode]="'indeterminate'" color="accent">
+  </mat-progress-spinner>
+</div>
