--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,3 @@
-.preloadProgress {
-
-}
-
-.preloadProgress * {
-  width: 50px !important;
-  height: 50px !important;
-}
-
 .paramview {
   color: white;
   max-height: 90vh;
@@ -62,6 +53,12 @@ h4 {
   height: 90vh !important;
   max-height: 90vh !important;
   overflow-y: auto;
+}
+
+.data_spinner {
+  position: absolute;
+  top: 6.5vh;
+  left: 9.5vw;
 }
 
 .charts_spinner {
