Modification css placement spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,12 @@
 <main>
   <nav>
     <div class="data">
-      <h1>Données</h1>
-      
+      <div class="preloadProgress header-table">
+        <h1>Données</h1>
+        <mat-progress-spinner class="spinner" [diameter]="25" color="accent" [value]="percentageOfPreloadEnded">
+        </mat-progress-spinner>
+      </div>
+
       <hr size="1" color="lightgray">
       <mat-accordion class="accordion-headers-align">
         <mat-expansion-panel *ngFor="let data of activeTable">
@@ -44,9 +48,4 @@
 </main>
 <div id='templates'>
   <template *ngFor="let el of allTemplates; let i = index" id='{{ i+102 }}' #chartHost></template>
-</div>
-
-<div class="preloadProgress">
-  <mat-progress-spinner class="data_spinner" [diameter]="25" color="accent" [value]="percentageOfPreloadEnded">
-  </mat-progress-spinner>
 </div>
