--- a/src/app/view/components/view/view.component.html
+++ b/src/app/view/components/view/view.component.html
@@ -1,3 +1,3 @@
-<p>
-  view works!
-</p>
+<div class="ecrans">
+    <template *ngFor="let el of allTemplates; let i = index" id='{{ i+102 }}' #chartHost></template>
+</div>
