init class + button whatever

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <figure>
     <img src="assets/images/football.png" alt="Logo" />
     <figcaption>DW</figcaption>
+    <button type="button" class="btn btn-primary saveButton" color="primary" (click)="saveChartsTable()">Sauvegarder la page</button>
+
   </figure>
 </header>
 <main>
