Correction routing Man's not hot

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,51 +1,1 @@
-<header>
-  <figure>
-    <img src="assets/images/football.png" alt="Logo" />
-    <figcaption>DW</figcaption>
-  </figure>
-</header>
-<main>
-  <nav>
-    <div class="data">
-      <div class="preloadProgress header-table">
-        <h1>Données</h1>
-        <mat-progress-spinner class="spinner" [diameter]="25" color="accent" [value]="percentageOfPreloadEnded">
-        </mat-progress-spinner>
-      </div>
-
-      <hr size="1" color="lightgray">
-      <mat-accordion class="accordion-headers-align">
-        <mat-expansion-panel *ngFor="let data of activeTable">
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              <h4>{{data.name}}</h4>
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <hr size="1" color="lightgray">
-          <h6 class="field" draggable="true" *ngFor="let field of data.fields"
-            (dragstart)="onDragField($event,field.name,data.name)">
-            {{ field.name }}
-          </h6>
-        </mat-expansion-panel>
-      </mat-accordion>
-    </div>
-  </nav>
-  <div id="chartContainerSimple" (drop)="onDrop($event)" (dragover)="allowDrop($event)">
-    <div class="fab">
-      <span class="fab-action-button">
-        <i class="fab-action-button_icon icon-material_add" (click)="diviseChartsSegment()"></i>
-      </span>
-    </div>
-    <div class='charts' id='1'>
-      <template #chartHost></template>
-    </div>
-
-  </div>
-  <aside class="right_panel">
-    <app-param-view (messageEvent)="messageReceiveFromRightPanel($event)" class="paramview">
-    </app-param-view>
-  </aside>
-</main>
-<div id='templates'>
-  <template *ngFor="let el of allTemplates; let i = index" id='{{ i+102 }}' #chartHost></template>
-</div>
+<router-outlet></router-outlet>
