--- a/src/app/view/components/view/view.component.html
+++ b/src/app/view/components/view/view.component.html
@@ -1,3 +1,7 @@
-<div class="ecrans">
+<div id="chartContainerSimple">
+  <div class='charts' id='1'>
+    <template #chartHost></template>
+  </div>
+  <div id='templates' class="ecrans">
     <template *ngFor="let el of allTemplates; let i = index" id='{{ i+102 }}' #chartHost></template>
-</div>
+  </div>
