--- a/src/app/view/components/view/view.component.html
+++ b/src/app/view/components/view/view.component.html
@@ -3,5 +3,5 @@
     <template #chartHost></template>
   </div>
   <div id='templates' class="ecrans">
-    <template *ngFor="let el of allTemplates; let i = index" id='{{ i+102 }}' #chartHost></template>
+    <template *ngFor="let el of allTemplates; let i = index" id='{{ i }}' #chartHost></template>
   </div>
