correction on chart changes. Update cursor css

--- a/src/app/components/main-view/main-view.component.scss
+++ b/src/app/components/main-view/main-view.component.scss
@@ -64,3 +64,11 @@
   .spinner{
     margin-left: 2%; 
   }
+
+  h6:hover{
+    cursor: grab;
+  }
+
+  .draggable:active{
+    cursor:grabbing;
+  }
