--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -39,37 +39,37 @@
       </span>
       <ul class="fab-buttons">
         <li class="fab-buttons__item">
-          <a (click)="changeChartView('pie')" href="#" class="fab-buttons__link" data-tooltip="Pie">
+          <a (click)="changeChartView('pie')" class="fab-buttons__link" data-tooltip="Pie">
             <i class="icon-material icon-material_pie"></i>
           </a>
         </li>
         <li class="fab-buttons__item">
-          <a (click)="changeChartView('doughnut')" href="#" class="fab-buttons__link" data-tooltip="Doughnut">
+          <a (click)="changeChartView('doughnut')" class="fab-buttons__link" data-tooltip="Doughnut">
             <i class="icon-material icon-material_doughnut"></i>
           </a>
         </li>
         <li class="fab-buttons__item">
-          <a (click)="changeChartView('bar')" href="#" class="fab-buttons__link" data-tooltip="Bar">
+          <a (click)="changeChartView('bar')" class="fab-buttons__link" data-tooltip="Bar">
             <i class="icon-material icon-material_bar"></i>
           </a>
         </li>
         <li class="fab-buttons__item">
-          <a (click)="changeChartView('line')" href="#" class="fab-buttons__link" data-tooltip="Line">
+          <a (click)="changeChartView('line')" class="fab-buttons__link" data-tooltip="Line">
             <i class="icon-material icon-material_line"></i>
           </a>
         </li>
         <li class="fab-buttons__item">
-          <a (click)="changeChartView('boxplot')" href="#" class="fab-buttons__link" data-tooltip="Boxplot">
+          <a (click)="changeChartView('boxplot')" class="fab-buttons__link" data-tooltip="Boxplot">
             <i class="icon-material icon-material_boxplot"></i>
           </a>
         </li>
         <li class="fab-buttons__item">
-          <a (click)="changeChartView('tab')" href="#" class="fab-buttons__link" data-tooltip="Tab">
+          <a (click)="changeChartView('tab')" class="fab-buttons__link" data-tooltip="Tab">
             <i class="icon-material icon-material_tab"></i>
           </a>
         </li>
         <li class="fab-buttons__item">
-          <a (click)="deleteChartView()" href="#" class="fab-buttons__link closeIcon" data-tooltip="Close">
+          <a (click)="deleteChartView()" class="fab-buttons__link closeIcon" data-tooltip="Close">
             <i class="icon-material icon-material_close"></i>
           </a>
         </li>
